[metadata]
name = FREE_OPTIONS_CHAIN
description-file = README.md
url = https://github.com/benjamincham/free_options_chain
project_urls =
    Bug Tracker = https://github.com/benjamincham/free_options_chain/issues
    Changelog = https://github.com/benjamincham/free_options_chain/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers




